[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/alien1.png" type="Texture" id=1]
[ext_resource path="res://Escenas/Alien.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.5483, 4.22457 )

[sub_resource type="Animation" id=2]
resource_name = "destruido"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "eliminar"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "vivo"
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="Alien" type="KinematicBody2D" groups=[
"aliens",
]]
position = Vector2( 107.772, 90.7556 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 3
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "vivo"
anims/destruido = SubResource( 2 )
anims/vivo = SubResource( 3 )

[node name="TimerMovimiento" type="Timer" parent="."]
wait_time = 0.5

[node name="SpawnPoint" type="Position2D" parent="."]
position = Vector2( 0, 8.09944 )
[connection signal="timeout" from="TimerMovimiento" to="." method="_on_TimerMovimiento_timeout"]
